<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionSearchPhoto"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/actionSortPhotos"
        android:title="@string/menu_sort" />
    <item
        android:id="@+id/actionOpenCamera"
        android:title="@string/menu_open_camera" />

    <item android:id="@+id/actionHidePhotos"
        android:title="@string/menu_stop_hidden" />
    <item
        android:id="@+id/actionShowHidden"
        android:title="@string/menu_show_hidden" />
</menu>