<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/editPhoto"
        android:icon="@drawable/ic_edit"
        android:title="@string/item_edit"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/actionShare"
        android:icon="@drawable/ic_share"
        android:title="@string/item_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        android:titleCondensed="true"/>
    <item
        android:id="@+id/actionDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/item_delete"
        app:showAsAction="always"/>
</menu>